# NativeWeb

./: .gitignore  meson.build  meson.options  version.py
examples/: meson.build
examples/application/: application.vala  config.vapi  interface.vala  meson.build
examples/application/app/: eslint.config.mjs  meson.build  next.config.ts  package-lock.json  package.json  postcss.config.cjs  theme.ts  wrapnpm.py
examples/application/app/nativeweb/: browser.d.ts  loglib.d.ts  signal.d.ts  utf8.d.ts
examples/application/app/pages/: _app.module.css  _app.tsx  _document.tsx  index.tsx
examples/application/app/types/: interface.d.ts
examples/application/extension/: extension.c  extension.h.in  extension.vala  extension.vapi  interface.vala  meson.build
examples/application/resources/: genres.py  meson.build  resources.xml.in
src/: application.vala  browser.c  browser.deps  browser.h  browser.vapi  config.vapi  daemon.conf  daemon.vala  delayed.vala  dragger.vala  headerbar.ui  headerbar.vala  hubwindow.ui  hubwindow.vala  meson.build  message.ui  message.vala  window.ui  window.vala
src/dbus/: address.c  address.h  address.vapi  meson.build
src/extension/: browser.vala  extension.c  extension.vala  gerror.vala  iattributable.vala  iinvocable.vala  isignalable.h  isignalable.vala  jscclass.vala  loglib.c  loglib.deps  loglib.h  loglib.vapi  meson.build  mixin.h  module.vala  params.c  params.h  params.vapi  promise.c  promise.h  promise.vapi  proxybase.vala  resources.xml  setup.js  utf8.vala
src/ipc/: ipc.h  ipc.vapi  ipccall.c  ipccall.h  ipclow.vapi  ipcreply.c  ipcreply.h  meson.build
src/process/: meson.build  process-unix.c  process-unix.h  processimpl.c  processimpl.h  processimpl.vapi  watcher.vala
src/resources/: meson.build  resources.xml
subprojects/: .gitignore  ipclib.wrap
